--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         .horse-track {
             width: 100%;
             height: 100px;
-            background-color: #23ac31;
+            background-color: #f5f5f5;
             border: 1px solid #ccc;
             position: relative;
             margin: 20px 0;
@@ -300,10 +300,18 @@
     <div id="investment" class="scene">
         <h1>投資</h1>
         <canvas id="stock-graph"></canvas>
-        <p>現在の株価: <span id="current-stock-price">0</span> 円</p>
-        <div id="stocks-display"></div>
-        <p>平均購入価格: <span id="average-stock-price">0</span> 円</p>
-        <p>保有株数: <span id="owned-stocks">0</span> 株</p>
+        <p>現在の株価:</p>
+        <div id="stocks-display">
+            <p>stockA 株価: <span id="stockA-price">0</span> 円</p>
+            <p>stockB 株価: <span id="stockB-price">0</span> 円</p>
+            <p>stockC 株価: <span id="stockC-price">0</span> 円</p>
+        </div>
+        <p>平均購入価格 (株A): <span id="average-stockA-price">0</span> 円</p>
+        <p>平均購入価格 (株B): <span id="average-stockB-price">0</span> 円</p>
+        <p>平均購入価格 (株C): <span id="average-stockC-price">0</span> 円</p>
+        <p>保有株数 (株A): <span id="owned-stocksA">0</span> 株</p>
+        <p>保有株数 (株B): <span id="owned-stocksB">0</span> 株</p>
+        <p>保有株数 (株C): <span id="owned-stocksC">0</span> 株</p>
         <input type="number" id="stock-amount" placeholder="株数を入力" min="1">
         <select id="stock-type">
             <option value="stockA">株A</option>
@@ -359,7 +367,7 @@
     <!-- Roulette Scene -->
     <div id="roulette" class="scene">
         <h1>ルーレット</h1>
-        <input type="number" id="roulette-number" placeholder="数字を選択 (0-36)" min="0" max="36">
+        <input type="number" id="roulette-number" placeholder="数字を選択 (0-6)" min="1" max="6">
         <input type="number" id="roulette-bet" placeholder="賭け金を入力" min="1">
         <input type="checkbox" class="start_btn" id="start_check" />
         <label class="act-start" for="start_check">
@@ -368,26 +376,12 @@
         <div class="rltt-body">
             <div class="hari"></div>
             <div class="rltt">
-                <div class="ban pink fas"></div>
-                <div class="ban blue fas"></div>
-                <div class="ban pink fas"></div>
-                <div class="ban blue fas"></div>
-                <div class="ban pink fas"></div>
-                <div class="ban blue fas"></div>
-                <div class="banlabel">
-                    <div class="labelgroup">
-                        <div><i class="fas fa-star"></i></div>
-                        <div><i class="fas fa-star"></i></div>
-                    </div>
-                    <div class="labelgroup">
-                        <div><i class="fas fa-star"></i></div>
-                        <div><i class="fas fa-star"></i></div>
-                    </div>
-                    <div class="labelgroup">
-                        <div><i class="fas fa-star"></i></div>
-                        <div><i class="fas fa-star"></i></div>
-                    </div>
-                </div>
+                <div class="ban pink fas"><div class="number-display">1</div></div>
+                <div class="ban blue fas"><div class="number-display">2</div></div>
+                <div class="ban pink fas"><div class="number-display">3</div></div>
+                <div class="ban blue fas"><div class="number-display">4</div></div>
+                <div class="ban pink fas"><div class="number-display">5</div></div>
+                <div class="ban blue fas"><div class="number-display">6</div></div>
             </div>
         </div>
         <p id="roulette-result"></p>
@@ -422,46 +416,66 @@
         };
 
         let stockPrices = {
-            stockA: 100,
-            stockB: 200,
-            stockC: 300
+            stockA: [100],
+            stockB: [200],
+            stockC: [300]
         };
+
+        const stockChart = new Chart(document.getElementById('stock-graph'), {
+            type: 'line',
+            data: {
+                labels: Array.from({ length: stockPrices.stockA.length }, (_, i) => `${i * 10}s`),
+                datasets: [
+                    { label: '株A', data: stockPrices.stockA, borderColor: 'rgba(75, 192, 192, 1)', borderWidth: 2 },
+                    { label: '株B', data: stockPrices.stockB, borderColor: 'rgba(255, 159, 64, 1)', borderWidth: 2 },
+                    { label: '株C', data: stockPrices.stockC, borderColor: 'rgba(153, 102, 255, 1)', borderWidth: 2 }
+                ]
+            },
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
 
         function updateStockPrice() {
             Object.keys(stockPrices).forEach(stock => {
-                let randomChange = Math.random() * 40 - 20;
-                stockPrices[stock] = Math.max(10, Math.floor(stockPrices[stock] + randomChange));
+                const lastPrice = stockPrices[stock][stockPrices[stock].length - 1];
+                const newPrice = Math.max(10, Math.floor(lastPrice + (Math.random() * 40 - 20)));
+                stockPrices[stock].push(newPrice);
+                if (stockPrices[stock].length > 100) {
+                    stockPrices[stock].shift();
+                }
             });
+            stockChart.data.labels = Array.from({ length: stockPrices.stockA.length }, (_, i) => `${i * 10}s`);
+            stockChart.data.datasets[0].data = stockPrices.stockA;
+            stockChart.data.datasets[1].data = stockPrices.stockB;
+            stockChart.data.datasets[2].data = stockPrices.stockC;
+            stockChart.update();
+            document.getElementById('stockA-price').textContent = stockPrices.stockA[stockPrices.stockA.length - 1];
+            document.getElementById('stockB-price').textContent = stockPrices.stockB[stockPrices.stockB.length - 1];
+            document.getElementById('stockC-price').textContent = stockPrices.stockC[stockPrices.stockC.length - 1];
         }
 
-        function displayStockPrices() {
-            const stockDisplay = document.getElementById('stocks-display');
-            stockDisplay.innerHTML = '';
-            Object.keys(stockPrices).forEach(stock => {
-                stockDisplay.innerHTML += `<p>${stock} 株価: ${stockPrices[stock]} 円</p>`;
-            });
-        }
-
-        setInterval(() => {
-            updateStockPrice();
-            displayStockPrices();
-        }, 20000);
+        setInterval(updateStockPrice, 20000);
+        updateStockPrice();
 
         function updateAverageStockPrice(stock) {
             const stockData = ownedStocks[stock];
             const averagePrice = stockData.amount > 0 ? stockData.totalSpent / stockData.amount : 0;
-            document.getElementById('average-stock-price').textContent = Math.floor(averagePrice);
+            document.getElementById(`average-${stock}-price`).textContent = Math.floor(averagePrice);
         }
 
-        function updateOwnedStocksDisplay() {
-            const stockType = document.getElementById('stock-type').value;
-            document.getElementById('owned-stocks').textContent = ownedStocks[stockType].amount;
+        function updateOwnedStocksDisplay(stock) {
+            document.getElementById(`owned-stocks${stock.toUpperCase()}`).textContent = ownedStocks[stock].amount;
         }
 
         document.getElementById('buy-stock').addEventListener('click', () => {
             const stockAmount = parseInt(document.getElementById('stock-amount').value);
             const stockType = document.getElementById('stock-type').value;
-            const stockPrice = stockPrices[stockType];
+            const stockPrice = stockPrices[stockType][stockPrices[stockType].length - 1];
             if (isNaN(stockAmount) || stockAmount <= 0) {
                 alert('購入する株数を正しく入力してください。');
                 return;
@@ -475,7 +489,7 @@
             ownedStocks[stockType].totalSpent += totalCost;
             updateMoney(-totalCost);
             updateAverageStockPrice(stockType);
-            updateOwnedStocksDisplay();
+            updateOwnedStocksDisplay(stockType);
             document.getElementById('stock-status').textContent = `${stockType}株価: ${stockPrice}円で${stockAmount}株購入しました。`;
             localStorage.setItem('ownedStocks', JSON.stringify(ownedStocks));
         });
@@ -483,7 +497,7 @@
         document.getElementById('sell-stock').addEventListener('click', () => {
             const stockAmount = parseInt(document.getElementById('stock-amount').value);
             const stockType = document.getElementById('stock-type').value;
-            const stockPrice = stockPrices[stockType];
+            const stockPrice = stockPrices[stockType][stockPrices[stockType].length - 1];
             if (isNaN(stockAmount) || stockAmount <= 0) {
                 alert('売却する株数を正しく入力してください。');
                 return;
@@ -496,7 +510,7 @@
             ownedStocks[stockType].amount -= stockAmount;
             updateMoney(totalGain);
             updateAverageStockPrice(stockType);
-            updateOwnedStocksDisplay();
+            updateOwnedStocksDisplay(stockType);
             document.getElementById('stock-status').textContent = `${stockType}株価: ${stockPrice}円で${stockAmount}株売却しました。`;
             localStorage.setItem('ownedStocks', JSON.stringify(ownedStocks));
         });
@@ -508,9 +522,13 @@
                 stockB: { amount: 0, totalSpent: 0 },
                 stockC: { amount: 0, totalSpent: 0 }
             };
-            stockPrices = { stockA: 100, stockB: 200, stockC: 300 };
-            updateOwnedStocksDisplay();
+            stockPrices = { stockA: [100], stockB: [200], stockC: [300] };
+            updateOwnedStocksDisplay('stockA');
+            updateOwnedStocksDisplay('stockB');
+            updateOwnedStocksDisplay('stockC');
             updateAverageStockPrice('stockA');
+            updateAverageStockPrice('stockB');
+            updateAverageStockPrice('stockC');
             document.getElementById('stock-status').textContent = '投資の履歴をすべて削除しました。';
             displayStockPrices();
         });
@@ -533,7 +551,9 @@
         document.getElementById('go-slot').addEventListener('click', () => switchScene(scenes.slotMachine));
         document.getElementById('go-investment').addEventListener('click', () => {
             switchScene(scenes.investment);
-            updateOwnedStocksDisplay();
+            updateOwnedStocksDisplay('stockA');
+            updateOwnedStocksDisplay('stockB');
+            updateOwnedStocksDisplay('stockC');
         });
 
         document.getElementById('back-horse').addEventListener('click', () => switchScene(scenes.mainMenu));
@@ -582,11 +602,14 @@
         document.getElementById('spin-roulette').addEventListener('click', () => {
             const number = parseInt(document.getElementById('roulette-number').value);
             const bet = parseInt(document.getElementById('roulette-bet').value);
-            const result = Math.floor(Math.random() * 37);
+            const result = Math.floor(Math.random() * 6) + 1;  // 1〜6の数字
+            const odds = [2, 3, 1.5, 4, 5, 6];  // 各セグメントの倍率
+
             document.getElementById('roulette-result').textContent = `結果: ${result}`;
             if (number === result) {
-                document.getElementById('roulette-result').textContent += ` 勝ちました！${bet * 36}円獲得！`;
-                updateMoney(bet * 36);
+                const winnings = bet * odds[result - 1];
+                document.getElementById('roulette-result').textContent += ` 勝ちました！${winnings}円獲得！`;
+                updateMoney(winnings);
             } else {
                 document.getElementById('roulette-result').textContent += ' 残念！';
                 updateMoney(-bet);
@@ -615,7 +638,11 @@
 
         displayStockPrices();
         updateAverageStockPrice('stockA');
-        updateOwnedStocksDisplay();
+        updateAverageStockPrice('stockB');
+        updateAverageStockPrice('stockC');
+        updateOwnedStocksDisplay('stockA');
+        updateOwnedStocksDisplay('stockB');
+        updateOwnedStocksDisplay('stockC');
     </script>
 </body>
 </html>
