--- a/index.html
+++ b/index.html
@@ -251,15 +251,15 @@
             </div>
             <div class="horse">
                 <input type="radio" name="horse" value="3" id="horse-3">
-                <label for="horse-3">馬3 (オッズ: 5.0)</label>
+                <label for="horse-3">ユニコーン(オッズ: 5.0)</label>
             </div>
             <div class="horse">
                 <input type="radio" name="horse" value="4" id="horse-4">
-                <label for="horse-4">馬4 (オッズ: 10.0)</label>
+                <label for="horse-4">マケタラバサシ(オッズ: 10.0)</label>
             </div>
             <div class="horse">
                 <input type="radio" name="horse" value="5" id="horse-5">
-                <label for="horse-5">馬5 (オッズ: 20.0)</label>
+                <label for="horse-5">ヤミー(オッズ: 20.0)</label>
             </div>
         </div>
         <input type="number" id="bet-amount" placeholder="賭け金を入力" min="1">
